src/test/deca/codegen/invalid/divide-zero.deca.skip
// Description:
//    Programme testant la division par zero
//
// Resultats:
//    // a definir
//
// Historique:
//    cree le 01/01/2024

{
    println(1 / 0);
}

